# table_reservations

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  pytest.ini  requirements.txt
reservation_app/: settings.py  urls.py
reservation_app/reservations/: apps.py  models.py  serializers.py  urls.py  views.py
reservation_app/reservations/migrations/: 0001_initial.py
reservation_app/tables/: apps.py  models.py  serializers.py  urls.py  views.py
reservation_app/tables/migrations/: 0001_initial.py
tests/: test_api.py
